// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`detection characterization > empty content 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 1,
    "processingTimeMs": 0,
    "totalLines": 1,
  },
  "secrets": [],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > jwt-lookalikes.txt with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 5,
    "processingTimeMs": 0,
    "totalLines": 5,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "eyJhbGci… (107 chars)",
      "description": "JWT token (format only)",
      "end": 204,
      "key": undefined,
      "position": {
        "column": 1,
        "line": 4,
      },
      "start": 97,
      "type": "jwt",
      "value": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJVadQssw5c",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > jwt-lookalikes.txt with includeTokens disabled 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 5,
    "processingTimeMs": 0,
    "totalLines": 5,
  },
  "secrets": [],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > multiline-key.pem with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 7,
    "processingTimeMs": 0,
    "totalLines": 7,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "-----BEG… (321 chars)",
      "description": "Private key block (PEM)",
      "end": 321,
      "key": undefined,
      "position": {
        "column": 1,
        "line": 1,
      },
      "start": 0,
      "type": "private-key",
      "value": "-----BEGIN RSA PRIVATE KEY-----
MIIEpAIBAAKCAQEA0Z3VS5JJcds3xfn/ygWyF0qbEbB1rO5DYyDdVOoPWkYPYYO1
7c1oiEUzDpTREoInvXl6rPZUdkXfaXbXSMeeqQ0qgxSAt4Vs9YMDoxrPsyIsdiUl
hcs2Vt2YOhNMLyz89dE7yGbCB2CTBSJTJhxYNvNAO7ZBqA69jSJTdSJTdSJTdSJT
qk9y3jCzsBRHnb7BxYzMDwyYzhhY2ZlODg3nb7BxYzMDwyYzhhY2ZlODg3aaaaaa
-----END RSA PRIVATE KEY-----",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.env at high sensitivity 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 9,
    "processingTimeMs": 0,
    "totalLines": 9,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "API_KEY=sk_demo_… (40 chars)",
      "description": "Generic API key",
      "end": 74,
      "key": "api_key",
      "position": {
        "column": 9,
        "line": 2,
      },
      "start": 34,
      "type": "api-key",
      "value": "sk_demo_abcdefghijklmnopqrstuvwxyz123456",
    },
    {
      "confidence": "high",
      "context": "DATABASE_PASSWORD=hunter2b… (16 chars)",
      "description": "Password",
      "end": 109,
      "key": "database_password",
      "position": {
        "column": 19,
        "line": 3,
      },
      "start": 93,
      "type": "password",
      "value": "hunter2butlonger",
    },
    {
      "confidence": "high",
      "context": "AWS_ACCESS_KEY_ID=AKIAIOSF… (20 chars)",
      "description": "AWS Access Key ID",
      "end": 148,
      "key": undefined,
      "position": {
        "column": 19,
        "line": 4,
      },
      "start": 128,
      "type": "aws-key",
      "value": "AKIAIOSFODNN7EXAMPLE",
    },
    {
      "confidence": "high",
      "context": "AWS_SECRET_ACCESS_KEY=wJalrXUt… (40 chars)",
      "description": "AWS Secret Access Key",
      "end": 211,
      "key": "aws_secret_access_key",
      "position": {
        "column": 23,
        "line": 5,
      },
      "start": 171,
      "type": "aws-secret",
      "value": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    },
    {
      "confidence": "high",
      "context": "DATABASE_URL=postgres… (44 chars)",
      "description": "Database URL with embedded credentials",
      "end": 269,
      "key": undefined,
      "position": {
        "column": 14,
        "line": 6,
      },
      "start": 225,
      "type": "database-url",
      "value": "postgres://admin:s3cret@db.internal:5432/app",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.env at low sensitivity 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 9,
    "processingTimeMs": 0,
    "totalLines": 9,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "API_KEY=sk_demo_… (40 chars)",
      "description": "Generic API key",
      "end": 74,
      "key": "api_key",
      "position": {
        "column": 9,
        "line": 2,
      },
      "start": 34,
      "type": "api-key",
      "value": "sk_demo_abcdefghijklmnopqrstuvwxyz123456",
    },
    {
      "confidence": "high",
      "context": "DATABASE_PASSWORD=hunter2b… (16 chars)",
      "description": "Password",
      "end": 109,
      "key": "database_password",
      "position": {
        "column": 19,
        "line": 3,
      },
      "start": 93,
      "type": "password",
      "value": "hunter2butlonger",
    },
    {
      "confidence": "high",
      "context": "AWS_ACCESS_KEY_ID=AKIAIOSF… (20 chars)",
      "description": "AWS Access Key ID",
      "end": 148,
      "key": undefined,
      "position": {
        "column": 19,
        "line": 4,
      },
      "start": 128,
      "type": "aws-key",
      "value": "AKIAIOSFODNN7EXAMPLE",
    },
    {
      "confidence": "high",
      "context": "AWS_SECRET_ACCESS_KEY=wJalrXUt… (40 chars)",
      "description": "AWS Secret Access Key",
      "end": 211,
      "key": "aws_secret_access_key",
      "position": {
        "column": 23,
        "line": 5,
      },
      "start": 171,
      "type": "aws-secret",
      "value": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    },
    {
      "confidence": "high",
      "context": "DATABASE_URL=postgres… (44 chars)",
      "description": "Database URL with embedded credentials",
      "end": 269,
      "key": undefined,
      "position": {
        "column": 14,
        "line": 6,
      },
      "start": 225,
      "type": "database-url",
      "value": "postgres://admin:s3cret@db.internal:5432/app",
    },
    {
      "confidence": "medium",
      "context": "SESSION_ID=abcdef12… (22 chars)",
      "description": "Session ID",
      "end": 303,
      "key": "session_id",
      "position": {
        "column": 12,
        "line": 7,
      },
      "start": 281,
      "type": "session-id",
      "value": "abcdef1234567890abcdef",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.env with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 9,
    "processingTimeMs": 0,
    "totalLines": 9,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "API_KEY=sk_demo_… (40 chars)",
      "description": "Generic API key",
      "end": 74,
      "key": "api_key",
      "position": {
        "column": 9,
        "line": 2,
      },
      "start": 34,
      "type": "api-key",
      "value": "sk_demo_abcdefghijklmnopqrstuvwxyz123456",
    },
    {
      "confidence": "high",
      "context": "DATABASE_PASSWORD=hunter2b… (16 chars)",
      "description": "Password",
      "end": 109,
      "key": "database_password",
      "position": {
        "column": 19,
        "line": 3,
      },
      "start": 93,
      "type": "password",
      "value": "hunter2butlonger",
    },
    {
      "confidence": "high",
      "context": "AWS_ACCESS_KEY_ID=AKIAIOSF… (20 chars)",
      "description": "AWS Access Key ID",
      "end": 148,
      "key": undefined,
      "position": {
        "column": 19,
        "line": 4,
      },
      "start": 128,
      "type": "aws-key",
      "value": "AKIAIOSFODNN7EXAMPLE",
    },
    {
      "confidence": "high",
      "context": "AWS_SECRET_ACCESS_KEY=wJalrXUt… (40 chars)",
      "description": "AWS Secret Access Key",
      "end": 211,
      "key": "aws_secret_access_key",
      "position": {
        "column": 23,
        "line": 5,
      },
      "start": 171,
      "type": "aws-secret",
      "value": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    },
    {
      "confidence": "high",
      "context": "DATABASE_URL=postgres… (44 chars)",
      "description": "Database URL with embedded credentials",
      "end": 269,
      "key": undefined,
      "position": {
        "column": 14,
        "line": 6,
      },
      "start": 225,
      "type": "database-url",
      "value": "postgres://admin:s3cret@db.internal:5432/app",
    },
    {
      "confidence": "medium",
      "context": "SESSION_ID=abcdef12… (22 chars)",
      "description": "Session ID",
      "end": 303,
      "key": "session_id",
      "position": {
        "column": 12,
        "line": 7,
      },
      "start": 281,
      "type": "session-id",
      "value": "abcdef1234567890abcdef",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.env with includeApiKeys disabled 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 9,
    "processingTimeMs": 0,
    "totalLines": 9,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "DATABASE_PASSWORD=hunter2b… (16 chars)",
      "description": "Password",
      "end": 109,
      "key": "database_password",
      "position": {
        "column": 19,
        "line": 3,
      },
      "start": 93,
      "type": "password",
      "value": "hunter2butlonger",
    },
    {
      "confidence": "high",
      "context": "DATABASE_URL=postgres… (44 chars)",
      "description": "Database URL with embedded credentials",
      "end": 269,
      "key": undefined,
      "position": {
        "column": 14,
        "line": 6,
      },
      "start": 225,
      "type": "database-url",
      "value": "postgres://admin:s3cret@db.internal:5432/app",
    },
    {
      "confidence": "medium",
      "context": "SESSION_ID=abcdef12… (22 chars)",
      "description": "Session ID",
      "end": 303,
      "key": "session_id",
      "position": {
        "column": 12,
        "line": 7,
      },
      "start": 281,
      "type": "session-id",
      "value": "abcdef1234567890abcdef",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.ini with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 6,
    "processingTimeMs": 0,
    "totalLines": 6,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "password = supersec… (22 chars)",
      "description": "Password",
      "end": 44,
      "key": "password",
      "position": {
        "column": 12,
        "line": 2,
      },
      "start": 22,
      "type": "password",
      "value": "supersecretpassword123",
    },
    {
      "confidence": "medium",
      "context": "connection_string = Server=p… (50 chars)",
      "description": "Connection string",
      "end": 115,
      "key": "connection_string",
      "position": {
        "column": 21,
        "line": 3,
      },
      "start": 65,
      "type": "connection-string",
      "value": "Server=prod;Database=app;Uid=admin;Pwd=secret123x;",
    },
    {
      "confidence": "medium",
      "context": "connection_string = Server=prod;Database=app;Uid=admin;Pwd=secre… (10 chars);",
      "description": "Password",
      "end": 114,
      "key": "pwd",
      "position": {
        "column": 60,
        "line": 3,
      },
      "start": 104,
      "type": "password",
      "value": "secret123x",
    },
    {
      "confidence": "high",
      "context": "api_key = 01234567… (32 chars)",
      "description": "Generic API key",
      "end": 164,
      "key": "api_key",
      "position": {
        "column": 11,
        "line": 5,
      },
      "start": 132,
      "type": "api-key",
      "value": "0123456789abcdef0123456789abcdef",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.ini with includePasswords disabled 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 6,
    "processingTimeMs": 0,
    "totalLines": 6,
  },
  "secrets": [
    {
      "confidence": "medium",
      "context": "connection_string = Server=p… (50 chars)",
      "description": "Connection string",
      "end": 115,
      "key": "connection_string",
      "position": {
        "column": 21,
        "line": 3,
      },
      "start": 65,
      "type": "connection-string",
      "value": "Server=prod;Database=app;Uid=admin;Pwd=secret123x;",
    },
    {
      "confidence": "high",
      "context": "api_key = 01234567… (32 chars)",
      "description": "Generic API key",
      "end": 164,
      "key": "api_key",
      "position": {
        "column": 11,
        "line": 5,
      },
      "start": 132,
      "type": "api-key",
      "value": "0123456789abcdef0123456789abcdef",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.js with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 13,
    "processingTimeMs": 0,
    "totalLines": 13,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "const apiKey = 'sk_demo_… (32 chars)';",
      "description": "Generic API key",
      "end": 48,
      "key": "apikey",
      "position": {
        "column": 17,
        "line": 1,
      },
      "start": 16,
      "type": "api-key",
      "value": "sk_demo_abcdefghijklmnopqrst1234",
    },
    {
      "confidence": "high",
      "context": "password: 'n0tS0Se… (15 chars)',",
      "description": "Password",
      "end": 95,
      "key": "password",
      "position": {
        "column": 13,
        "line": 3,
      },
      "start": 80,
      "type": "password",
      "value": "n0tS0Secr3tP@ss",
    },
    {
      "confidence": "high",
      "context": "'Bearer eyJhbGci… (79 chars)',",
      "description": "Bearer token",
      "end": 257,
      "key": undefined,
      "position": {
        "column": 12,
        "line": 9,
      },
      "start": 178,
      "type": "bearer-token",
      "value": "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxIn0.dozjgNryP4J3jVmNHl0w5NXgL0n3I9PlFUP0THsR8U",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.json with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 9,
    "processingTimeMs": 0,
    "totalLines": 9,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": ""apiKey": "a1b2c3d4… (32 chars)",",
      "description": "Generic API key",
      "end": 46,
      "key": "apikey",
      "position": {
        "column": 13,
        "line": 2,
      },
      "start": 14,
      "type": "api-key",
      "value": "a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6",
    },
    {
      "confidence": "high",
      "context": ""token": "ghp_abcd… (40 chars)",",
      "description": "Generic token",
      "end": 112,
      "key": "token",
      "position": {
        "column": 13,
        "line": 4,
      },
      "start": 72,
      "type": "token",
      "value": "ghp_abcdefghijklmnopqrstuvwxyz0123456789",
    },
    {
      "confidence": "high",
      "context": ""refresh_token": "rt_abcde… (27 chars)"",
      "description": "Refresh token",
      "end": 162,
      "key": "refresh_token",
      "position": {
        "column": 21,
        "line": 5,
      },
      "start": 135,
      "type": "refresh-token",
      "value": "rt_abcdefghijklmnopqrstuvwx",
    },
    {
      "confidence": "medium",
      "context": ""connectionString": "Server=d… (53 chars)"",
      "description": "Connection string",
      "end": 243,
      "key": "connectionstring",
      "position": {
        "column": 23,
        "line": 7,
      },
      "start": 190,
      "type": "connection-string",
      "value": "Server=db;User=sa;Password=Sup3rSecret!x;Encrypt=true",
    },
    {
      "confidence": "high",
      "context": ""connectionString": "Server=db;User=sa;Password=Sup3rS… (13 chars);Encrypt=true"",
      "description": "Password",
      "end": 230,
      "key": "password",
      "position": {
        "column": 50,
        "line": 7,
      },
      "start": 217,
      "type": "password",
      "value": "Sup3rSecret!x",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.py with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 4,
    "processingTimeMs": 0,
    "totalLines": 4,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "API_KEY = "AIzaSyAa… (36 chars)"",
      "description": "Generic API key",
      "end": 47,
      "key": "api_key",
      "position": {
        "column": 12,
        "line": 1,
      },
      "start": 11,
      "type": "api-key",
      "value": "AIzaSyAabcdefghijklmnopqrstuvwxyz123",
    },
    {
      "confidence": "high",
      "context": "db_password = "postgres… (18 chars)"",
      "description": "Password",
      "end": 82,
      "key": "db_password",
      "position": {
        "column": 16,
        "line": 2,
      },
      "start": 64,
      "type": "password",
      "value": "postgres_pw_123456",
    },
    {
      "confidence": "medium",
      "context": "SECRET_TOKEN = "tok_abcd… (26 chars)"",
      "description": "Generic token",
      "end": 126,
      "key": "secret_token",
      "position": {
        "column": 17,
        "line": 3,
      },
      "start": 100,
      "type": "token",
      "value": "tok_abcdefghijklmnopqrstuv",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`detection characterization > secrets.yaml with default options 1`] = `
{
  "errors": [],
  "metadata": {
    "processedLines": 6,
    "processingTimeMs": 0,
    "totalLines": 6,
  },
  "secrets": [
    {
      "confidence": "high",
      "context": "aws_access_key_id: AKIAIOSF… (20 chars)",
      "description": "AWS Access Key ID",
      "end": 39,
      "key": undefined,
      "position": {
        "column": 20,
        "line": 1,
      },
      "start": 19,
      "type": "aws-key",
      "value": "AKIAIOSFODNN7EXAMPLE",
    },
    {
      "confidence": "high",
      "context": "azure_account_key: YWJjZGVm… (44 chars)",
      "description": "Azure account key",
      "end": 103,
      "key": "azure_account_key",
      "position": {
        "column": 20,
        "line": 2,
      },
      "start": 59,
      "type": "azure-key",
      "value": "YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXo0NTY3ODk=",
    },
    {
      "confidence": "high",
      "context": "password: correcth… (25 chars)",
      "description": "Password",
      "end": 139,
      "key": "password",
      "position": {
        "column": 11,
        "line": 3,
      },
      "start": 114,
      "type": "password",
      "value": "correcthorsebatterystaple",
    },
    {
      "confidence": "medium",
      "context": "gcp_key: my-proje… (20 chars)",
      "description": "GCP/Google Cloud key",
      "end": 169,
      "key": "gcp_key",
      "position": {
        "column": 10,
        "line": 4,
      },
      "start": 149,
      "type": "gcp-key",
      "value": "my-project-key-12345",
    },
    {
      "confidence": "high",
      "context": "oauth_token: ya29a0Af… (31 chars)",
      "description": "OAuth token",
      "end": 214,
      "key": "oauth_token",
      "position": {
        "column": 14,
        "line": 5,
      },
      "start": 183,
      "type": "oauth-token",
      "value": "ya29a0AfH6SMBx7abcdefghijklmnop",
    },
  ],
  "success": true,
  "warnings": [],
}
`;

exports[`sanitization characterization > secrets.env with default replacement 1`] = `
{
  "errors": [],
  "metadata": {
    "originalLength": 319,
    "processingTimeMs": 0,
    "replacementsCount": 6,
    "sanitizedLength": 221,
  },
  "replacements": [
    {
      "original": "abcdef1234567890abcdef",
      "position": {
        "column": 12,
        "line": 7,
      },
      "replaced": "***REDACTED***",
      "type": "session-id",
    },
    {
      "original": "postgres://admin:s3cret@db.internal:5432/app",
      "position": {
        "column": 14,
        "line": 6,
      },
      "replaced": "***REDACTED***",
      "type": "database-url",
    },
    {
      "original": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
      "position": {
        "column": 23,
        "line": 5,
      },
      "replaced": "***REDACTED***",
      "type": "aws-secret",
    },
    {
      "original": "AKIAIOSFODNN7EXAMPLE",
      "position": {
        "column": 19,
        "line": 4,
      },
      "replaced": "***REDACTED***",
      "type": "aws-key",
    },
    {
      "original": "hunter2butlonger",
      "position": {
        "column": 19,
        "line": 3,
      },
      "replaced": "***REDACTED***",
      "type": "password",
    },
    {
      "original": "sk_demo_abcdefghijklmnopqrstuvwxyz123456",
      "position": {
        "column": 9,
        "line": 2,
      },
      "replaced": "***REDACTED***",
      "type": "api-key",
    },
  ],
  "sanitizedContent": "# Application environment
API_KEY=***REDACTED***
DATABASE_PASSWORD=***REDACTED***
AWS_ACCESS_KEY_ID=***REDACTED***
AWS_SECRET_ACCESS_KEY=***REDACTED***
DATABASE_URL=***REDACTED***
SESSION_ID=***REDACTED***
SHORT_PWD=tiny
",
  "success": true,
  "warnings": [],
}
`;

exports[`sanitization characterization > secrets.ini with custom replacement 1`] = `
{
  "errors": [],
  "metadata": {
    "originalLength": 165,
    "processingTimeMs": 0,
    "replacementsCount": 3,
    "sanitizedLength": 119,
  },
  "replacements": [
    {
      "original": "0123456789abcdef0123456789abcdef",
      "position": {
        "column": 11,
        "line": 5,
      },
      "replaced": "[GONE]",
      "type": "api-key",
    },
    {
      "original": "secret123x",
      "position": {
        "column": 60,
        "line": 3,
      },
      "replaced": "[GONE]",
      "type": "password",
    },
    {
      "original": "supersecretpassword123",
      "position": {
        "column": 12,
        "line": 2,
      },
      "replaced": "[GONE]",
      "type": "password",
    },
  ],
  "sanitizedContent": "[database]
password = [GONE]
connection_string = Server=prod;Database=app;Uid=admin;Pwd=[GONE];
[api]
api_key = [GONE]
",
  "success": true,
  "warnings": [],
}
`;
